--- a/EasyMock/src/main/res/layout/rv_item.xml
+++ b/EasyMock/src/main/res/layout/rv_item.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="10dp"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-<ImageView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    app:cardBackgroundColor="#16e4d3"
+    app:cardUseCompatPadding="true"
+    app:cardCornerRadius="5dp">
+    <LinearLayout
+        android:padding="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+    <ImageView
     android:id="@+id/iv_touxiang"
     android:layout_width="50dp"
     android:layout_height="50dp"
     android:src="@mipmap/ic_launcher"/>
     <LinearLayout
+        android:background="#16e4d3"
         android:paddingLeft="20dp"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="50dp"
         android:orientation="vertical">
         <LinearLayout
@@ -20,11 +30,13 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
         <TextView
+            android:textColor="#fff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ID: "/>
+            android:text="快递单号: "/>
             <TextView
-                android:id="@+id/tv_id"
+                android:textColor="#fff"
+                android:id="@+id/tv_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="123456"/>
@@ -34,10 +46,12 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
         <TextView
+            android:textColor="#fff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name: "/>
+            android:text="快递公司: "/>
             <TextView
+                android:textColor="#fff"
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -45,4 +59,18 @@
         </LinearLayout>
 
     </LinearLayout>
-</LinearLayout>
+        <android.support.v7.widget.CardView
+            app:cardCornerRadius="15dp"
+            app:cardBackgroundColor="#f28282"
+            android:layout_gravity="center"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/cv_delete"
+            >
+            <ImageView
+                android:src="@mipmap/ic_remove_white_36dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
