实现页面跳转，点击快递跳至查询页面 添加字体样式

--- a/EasyMock/src/main/res/layout/express_item.xml
+++ b/EasyMock/src/main/res/layout/express_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
     <com.owangwang.easymock.MyView
         android:layout_width="25dp"
@@ -9,7 +9,7 @@
     <LinearLayout
         android:padding="5dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
             android:text="11"
@@ -21,6 +21,6 @@
             android:text="已经到达******"
             android:id="@+id/tv_ex_status"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </LinearLayout>
