--- a/EasyMock/src/main/res/layout/activity_main.xml
+++ b/EasyMock/src/main/res/layout/activity_main.xml
@@ -28,14 +28,27 @@
     android:layout_below="@+id/tv_title"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
-<android.support.v7.widget.RecyclerView
 
-    android:layout_below="@+id/tv_title"
-    android:id="@+id/rv"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_below="@+id/tv_title"
+        android:id="@+id/swipe_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ScrollView
+            android:overScrollMode="never"
+            android:scrollbars="none"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <android.support.v7.widget.RecyclerView
 
-</android.support.v7.widget.RecyclerView>
+                android:id="@+id/rv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </android.support.v7.widget.RecyclerView>
+        </ScrollView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/bt_add"
