--- a/EasyMock/src/main/res/layout/add_express_layout.xml
+++ b/EasyMock/src/main/res/layout/add_express_layout.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <EditText
+            android:singleLine="true"
             android:id="@+id/et_save_number"
             android:layout_marginLeft="10dp"
             android:background="@null"
