--- a/EasyMock/src/main/res/layout/add_express_layout.xml
+++ b/EasyMock/src/main/res/layout/add_express_layout.xml
@@ -3,16 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@mipmap/background"
     android:padding="10dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
-            android:text="快递公司"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="快递公司:"
+            android:textColor="#fff" />
         <Spinner
+            android:backgroundTint="#fff"
             android:id="@+id/select_type"
             android:layout_marginLeft="5dp"
             android:layout_width="match_parent"
@@ -27,10 +31,13 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:text="快递单号"
+
+            android:textColor="#fff"
+            android:text="快递单号:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <EditText
+            android:textColor="#fff"
             android:singleLine="true"
             android:id="@+id/et_save_number"
             android:layout_marginLeft="10dp"
