--- a/EasyMock/src/main/res/layout/express_item.xml
+++ b/EasyMock/src/main/res/layout/express_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
-    <com.owangwang.easymock.MyView
+    <com.owangwang.easymock.views.MyView
         android:layout_width="25dp"
         android:layout_height="match_parent"/>
     <LinearLayout
@@ -12,11 +12,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
+            android:textColor="#aba7a7"
             android:text="11"
             android:id="@+id/tv_ex_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:textColor="#aba7a7"
             android:layout_marginTop="5dp"
             android:text="已经到达******"
             android:id="@+id/tv_ex_status"
