--- a/EasyMock/src/main/res/layout/express_manager_layout.xml
+++ b/EasyMock/src/main/res/layout/express_manager_layout.xml
@@ -1,10 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@mipmap/background">
+
+
 <fragment
     android:id="@+id/fg_1"
     android:name="com.owangwang.easymock.MyExpressFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
-</LinearLayout>
+
+    <LinearLayout
+        android:visibility="gone"
+        android:layout_gravity="start"
+        android:background="#ffffff"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <android.support.design.widget.NavigationView
+
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:menu="@menu/nav_menu"
+            app:headerLayout="@layout/head_layout">
+
+
+        </android.support.design.widget.NavigationView>
+        <LinearLayout
+            android:background="#ffffff"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="版本号:" />
+            <TextView
+                android:layout_marginLeft="10dp"
+                android:text="1.0.0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+
+     </LinearLayout>
+
+
+</android.support.v4.widget.DrawerLayout>
