--- a/EasyMock/src/main/res/layout/query_kuaidi.xml
+++ b/EasyMock/src/main/res/layout/query_kuaidi.xml
@@ -2,18 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="20dp"
+    android:background="@mipmap/background"
     android:orientation="vertical">
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
+            android:textColor="#fff"
             android:text="快递公司"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <Spinner
+            android:backgroundTint="#fff"
             android:layout_marginLeft="5dp"
             android:id="@+id/sp"
             android:layout_width="match_parent"
@@ -30,10 +35,12 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <TextView
+        android:textColor="#fff"
         android:text="快递单号"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <EditText
+    <TextView
+        android:textColor="#fff"
         android:singleLine="true"
         android:layout_marginLeft="10dp"
         android:background="@null"
@@ -42,6 +49,7 @@
         android:layout_height="wrap_content" />
 </LinearLayout>
 <Button
+    android:visibility="gone"
     android:layout_marginTop="10dp"
     android:background="@drawable/bt_bg"
     android:id="@+id/bt_query"
@@ -58,30 +66,38 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <ImageView
+        <android.support.v7.widget.CardView
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:src="@mipmap/ic_launcher"
-            />
-        <LinearLayout
+            app:cardCornerRadius="10dp">
+            <ImageView
+                android:id="@+id/iv_sqstatus"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@mipmap/ic_launcher"
+                />
+        </android.support.v7.widget.CardView>
 
+        <LinearLayout
 
             android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
-                android:id="@+id/status"
+                android:layout_marginLeft="10dp"
+                android:id="@+id/name_and_number"
+                android:text="中通快递"
                 android:textSize="17sp"
-                android:text="运输中"
                 android:textColor="#f9a10a"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:layout_marginLeft="10dp"
+                android:id="@+id/status"
                 android:layout_marginTop="5dp"
                 android:textColor="#f9a10a"
-                android:text="中通快递"
-                android:id="@+id/name_and_number"
+                android:text="运输中"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
