--- a/EasyMock/src/main/res/values/colors.xml
+++ b/EasyMock/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#16e4d3</color>
+    <color name="lastColor">#16e4d3</color>
+    <color name="aaa">#00000000</color>
 </resources>
