--- a/EasyMock/src/main/res/layout/activity_main.xml
+++ b/EasyMock/src/main/res/layout/activity_main.xml
@@ -7,6 +7,11 @@
     android:padding="10dp"
     tools:context="com.owangwang.easymock.MainActivity"
     android:orientation="vertical">
+    <ImageView
+        android:src="@mipmap/ic_reorder_white_36dp"
+        android:id="@+id/iv_open"
+        android:layout_width="36dp"
+        android:layout_height="36dp" />
     <TextView
         android:paddingBottom="10dp"
         android:id="@+id/tv_title"
