--- a/EasyMock/src/main/res/layout/head_layout.xml
+++ b/EasyMock/src/main/res/layout/head_layout.xml
@@ -3,8 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#cc124448">
+    android:background="#cc012948">
 <android.support.v7.widget.CardView
+    android:visibility="gone"
     app:cardCornerRadius="50dp"
     android:layout_centerInParent="true"
     android:layout_width="100dp"
