--- a/EasyMock/src/main/res/menu/nav_menu.xml
+++ b/EasyMock/src/main/res/menu/nav_menu.xml
@@ -4,23 +4,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/it_1"
-            android:icon="@mipmap/ic_launcher"
+            android:id="@+id/it_search"
+            android:icon="@mipmap/ic_search_black_36dp"
             android:title="查询"
             />
+
         <item
-            android:id="@+id/it_2"
-            android:icon="@mipmap/ic_launcher"
-            android:title="call"
-            />
-        <item
-            android:id="@+id/it_3"
-            android:icon="@mipmap/ic_launcher"
+            android:id="@+id/it_call"
+            android:icon="@mipmap/ic_chat_black_36dp"
             android:title="联系我"
             />
         <item
-            android:id="@+id/it_4"
-            android:icon="@mipmap/ic_launcher"
+            android:id="@+id/it_set"
+            android:icon="@mipmap/ic_settings_black_36dp"
             android:title="设置"
             />
     </group>
