--- a/EasyMock/src/main/res/layout/rv_item.xml
+++ b/EasyMock/src/main/res/layout/rv_item.xml
@@ -6,11 +6,13 @@
     android:orientation="horizontal"
     app:cardBackgroundColor="#077b6f"
     app:cardUseCompatPadding="true"
+
     app:cardCornerRadius="5dp">
     <LinearLayout
+        android:background="@mipmap/background"
         android:padding="5dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:orientation="horizontal">
         <android.support.v7.widget.CardView
             android:layout_width="50dp"
@@ -18,6 +20,7 @@
             app:cardCornerRadius="25dp"
             app:cardBackgroundColor="#0e9da7">
             <TextView
+                android:textSize="16sp"
                 android:id="@+id/tv_touxiang"
                 android:gravity="center"
                 android:text="已签收"
@@ -55,7 +58,7 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
         <TextView
             android:textColor="#fff"
